<?xml version="1.0" encoding="utf-8"?>
<!--
/*
 * Copyright (C) 2007-2008 Esmertec AG.
 * Copyright (C) 2007-2008 The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <Preference
        android:key="empty_key"
        android:maxLines="1"
        android:title="" />

    <Preference
        android:key="infor_type_key"
        android:maxLines="1"
        android:title="@string/pref_title_type" />
    <Preference
        android:key="infor_longtitude_key"
        android:maxLines="1"
        android:title="@string/pref_title_longtitude" />
    <Preference
        android:key="infor_latitude_key"
        android:maxLines="1"
        android:title="@string/pref_title_latitude" />
    <Preference
        android:key="infor_radius_key"
        android:maxLines="1"
        android:title="@string/pref_title_radius" />
    <Preference
        android:key="infor_countrycode_key"
        android:maxLines="1"
        android:title="@string/pref_title_countrycode" />
    <Preference
        android:key="infor_country_key"
        android:maxLines="1"
        android:title="@string/pref_title_country" />
    <Preference
        android:key="infor_citycode_key"
        android:maxLines="1"
        android:title="@string/pref_title_citycode" />
    <Preference
        android:key="infor_city_key"
        android:maxLines="1"
        android:title="@string/pref_title_city" />
    <Preference
        android:key="infor_district_key"
        android:maxLines="1"
        android:title="@string/pref_title_district" />
    <Preference
        android:key="infor_street_key"
        android:maxLines="1"
        android:title="@string/pref_title_display_name" />
    <Preference
        android:key="infor_addr_key"
        android:maxLines="1"
        android:title="@string/pref_title_address" />

    <Preference
        android:key="infor_description_key"
        android:maxLines="1"
        android:title="@string/pref_title_description" />
    <!-- A 'parent' preference, which enables/disables child preferences (below)
     when checked/unchecked. -->

</PreferenceScreen>