<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity"
    android:orientation="vertical"
    android:gravity="bottom">


    <FrameLayout
        android:id="@+id/fragment_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />



    <RadioGroup
        android:id="@+id/tab_bar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@android:color/black"
        android:layout_gravity="bottom"
        android:gravity="center"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/tab_home"
            style="@style/navigation_bottom_radio"
            android:drawableTop="@drawable/image_location_selector"
            android:text="@string/home" />
        <RadioButton
            android:id="@+id/tab_statis"
            android:drawableTop="@drawable/image_camera_selector"
            style="@style/navigation_bottom_radio"
            android:text="@string/statisc" />

        <RadioButton
            android:id="@+id/tab_setting"
            android:drawableTop="@drawable/image_inbox_selector"
            style="@style/navigation_bottom_radio"
            android:text="@string/bluetooth" />

    </RadioGroup>
</LinearLayout>
