<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.smartbracelet.com.smartbracelet.activity.CheckInActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:gravity="center_horizontal"
        android:textAppearance="@style/CheckInTitleTextStyle"
        android:text="@string/check_in_title"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/main_menu_button_height"
            android:layout_weight="1.0"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/check_announce_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_startup" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check_in_announce"
                android:textAppearance="@style/MainMenuButtonTextStyle" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/main_menu_button_height"
            android:layout_weight="1.0"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/check_talk_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_startup" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check_in_talk"
                android:textAppearance="@style/MainMenuButtonTextStyle" />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/main_menu_button_height"
            android:layout_weight="1.0"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/check_study_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_startup" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check_in_study"
                android:textAppearance="@style/MainMenuButtonTextStyle" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/main_menu_button_height"
            android:layout_weight="1.0"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/check_labor_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_startup" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check_in_labor"
                android:textAppearance="@style/MainMenuButtonTextStyle" />
        </LinearLayout>


    </LinearLayout>

</LinearLayout>
